# dacon-hansol-deco-challenge

./: .gitignore  Data_Preprocessing.ipynb  RAG_llama_index.ipynb  README.md  llama_parse.ipynb  pyproject.toml
hansolrag/: app.py
hansolrag/augment/: __init__.py  augment.py
hansolrag/config/: config.yaml
hansolrag/data/: mini_test.csv  submission.csv  test.csv  train.csv
hansolrag/data/preprocessed_data/: augmented_train.csv  augmented_train_2.csv
hansolrag/data/sample_responses/: orion_responses.json  sample_submission.csv  solar_responses.json
hansolrag/deliverable/: mini_test_result.csv  mini_test_result.json
hansolrag/generator/: __init__.py  generator.py  response_generator.py
hansolrag/index/train-vector-index-storage-chunk-size-1295/: default__vector_store.json  docstore.json  index_store.json
hansolrag/notebooks/: Data_Preprocessing.ipynb  Finetune_Huggingface_Embeddings.ipynb  Orion_QLoRA.ipynb  RAG_llama_index.ipynb  Solar_train_QLoRA.ipynb  pdf_combined_RAG_llama_index.ipynb
hansolrag/pipeline/: augment.py  generator.py  index.py  pipeline copy.py  pipeline.py  reranker.py  retriever.py  sandbox.ipynb  submission_utlis.py
hansolrag/retriever/: __init__.py  retriever.py  retriever_factory.py
