[tool.poetry]
name = "hansolrag"
version = "0.1.1"
description = "RAG approach used in Hansol Deco Challenge 2024"
authors = ["Bibek K C <bibekyess@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "^0.10.20"
llama-index-core = "^0.10.20.post2"
llama-index-readers-file = "^0.1.11"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-postprocessor-flag-embedding-reranker = "^0.1.2"
flagembedding = {git = "https://github.com/FlagOpen/FlagEmbedding.git"}
peft = "^0.9.0"
bitsandbytes = "^0.43.0"
accelerate = "^0.28.0"
torch = "^2.2.1"
llama-cpp-python = "^0.2.61"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hansolrag = "hansolrag.app:main"
